tests/unit/language/errors/handle_type_mismatch_error.arche
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -q "type mismatch\|error" %t.out
arche Player {
  pos: float,
}


arche Enemy {
  health: float,
}


static table<Player>(10);

static table<Enemy>(10);


proc main() {
  let p := insert(table<Player>, 1.0);
  delete(table<Enemy>, p);
}
